# Portfolio_Amazon_Sales

./: .gitignore  README.md  main.py  pyproject.toml
src/config/: logger_settings.py
src/core/: df_handler.py
src/core/controllers/: selenium_handler.py
src/core/helpers/: utilities.py
src/views/: home_view.py
