[tool.poetry]
name = "amazon-sales"
version = "0.1.0"
description = ""
authors = ["TomelinPcWindows <guilhermesantosgts@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
streamlit = "^1.40.2"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
